[tool.poetry]
name = "iso3166-alpha-converter"
version = "0.1.0"
description = "Converts between alpha2 ('us') and alpha3 ('USA') ISO 3166 country codes"
authors = ["Albert <github@albert.sh>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.0"
lxml = "^4.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
